--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title> 微转盘 - 万万没想到 搞搞吧 上街吧 玩会儿 微信转盘 </title>
-<%= javascript_include_tag "application" %>
+<%#= javascript_include_tag "application" %>
+<script src="http://wx.51self.com/js/app.js"></script>  
 <style type="text/css">
 body, div, img, h1, h2, h3, h4, h5, h6 { padding:0px; margin:0px; }
 img { border:none; }
