--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,7 +17,7 @@ img { border:none; }
 </head>
 <body>
 <div class="wrapper">
-  <h1>微转盘 - 要你好玩</h1>
+  <h1>爱测试</h1>
   <br/>
   <div id="con1_1">
     <% @materials.each do |m| %>
