--- a/app/views/home/list.html.erb
+++ b/app/views/home/list.html.erb
@@ -76,6 +76,17 @@
         init();
     });
 </script>
+
+<div style="background: #444;">
+      <a href="/?page=<%= @next_page %>" >
+        <div style="margin: 0 auto 0 auto; width:600px; font-size: 36px; padding:15px; text-align:center; color:white;">
+          点击加载更多游戏
+        </div>
+      </a>
+</div>
+
+
+
 <footer class="footer" id="j_foot_nav" style="display: block;">
 
   <menu class="d-menu" style="display:none;"></menu>
