--- a/app/views/home/list.html.erb
+++ b/app/views/home/list.html.erb
@@ -14,6 +14,8 @@
 </head>
 <body >
 
+<%= render '/shared/ad1' %>
+
 <article class="content">
   <section class="app-intro">
     <ul class="mod-app-intro game_list" id="j_game_list">
@@ -79,7 +81,7 @@
 
 <div style="background: #444;">
       <a href="/?page=<%= @next_page %>" >
-        <div style="margin: 0 auto 0 auto; width:600px; font-size: 36px; padding:15px; text-align:center; color:white;">
+        <div style="margin: 0 auto 0 auto; width: 100%; font-size: 36px; padding:15px; text-align:center; color:white;">
           点击加载更多游戏
         </div>
       </a>
