--- a/app/views/weitest/show.html.erb
+++ b/app/views/weitest/show.html.erb
@@ -55,8 +55,10 @@
     <% @html_image_2 = @material.images.select{|i| i.state == 13}[0].try(:body) %>
     <% @html_image_3 = @material.images.select{|i| i.state == 14}[0].try(:body) %>
     <%= ERB.new(@category.html).result(binding).html_safe %>
-    
-    <% if  @category.game_type_id != 7 and @category.game_type_id != 11 %>
+   
+    <% show_rec = @material.category and @material.category.material_type != 1 %>
+ 
+    <% if show_rec and @category.game_type_id != 7 and @category.game_type_id != 11 %>
       <%#= render "shared/ad_bottom" %>
       <%= render "shared/ad_wx" %>
       <% unless @category.use_wxjs %>
