--- a/app/views/admin/answers/_form.html.erb
+++ b/app/views/admin/answers/_form.html.erb
@@ -23,6 +23,14 @@
       <%= f.text_area :title, style: "width:200px", required: true %> 
     </div>
   </div>
+
+  <div class="control-group">
+    <label class="control-label" style="width:100px">描述:</strong></label>
+    <div class="controls" style="margin:0 30px 0 110px">
+      <%= f.text_area :desc, style: "width:200px", required: true %>
+    </div>
+  </div>
+
   
   <div class="control-group">
     <label class="control-label" style="width:100px"><strong>权重:</strong></label>
