--- a/app/views/admin/question_answers/_form.html.erb
+++ b/app/views/admin/question_answers/_form.html.erb
@@ -20,7 +20,13 @@
         <strong>问题答案:</strong>
       </label>
       <div class="controls" style="margin:0 30px 0 110px">
-        <%= f.text_area :answer, style: "width:400px", required: true %>
+        <%= f.text_area :answer, style: "width:400px" %>
+      </div>
+      <label class="control-label" style="width:100px">
+        <strong>答案图片:</strong>
+      </label>
+      <div class="controls" style="margin:0 30px 0 110px">
+        <%= f.text_area :answer_img, style: "width:400px" %>
       </div>
     </div>
 
@@ -32,6 +38,17 @@
         <%= f.text_field :answer_score, style: "width:400", required: true %>
       </div>
     </div>
+
+
+    <div class="control-group">
+      <label class="control-label" style="width:100px">
+        <strong>问题答案跳转:</strong>
+      </label>
+      <div class="controls" style="margin:0 30px 0 110px">
+        <%= f.text_field :answer_jump, style: "width:400", required: true %>
+      </div>
+    </div>
+
 
     <div class="form-actions" style="margin-bottom:0px;margin-left:-28px">
       <button type="submit" class="btn btn-primary">提交</button>
