--- a/app/views/weitest/show.html.erb
+++ b/app/views/weitest/show.html.erb
@@ -67,7 +67,7 @@
         <%= render "shared/rec_games" %>
         <%= render "shared/ad_bottom" %>
         <%= render "shared/rec_h5_games" %>
-        <%= render "shared/ad_bottom" %>
+        <%#= render "shared/ad_bottom" %>
       <% end %> 
     <% else %>
       <% if @category.game_type_id == 11 %>
