--- a/app/views/admin/answers/_form.html.erb
+++ b/app/views/admin/answers/_form.html.erb
@@ -27,7 +27,7 @@
   <div class="control-group">
     <label class="control-label" style="width:100px">描述:</strong></label>
     <div class="controls" style="margin:0 30px 0 110px">
-      <%= f.text_area :desc, style: "width:200px", required: true %>
+      <%= f.text_area :desc, style: "width:200px" %>
     </div>
   </div>
 
