--- a/app/views/admin/question_answers/_form.html.erb
+++ b/app/views/admin/question_answers/_form.html.erb
@@ -35,7 +35,7 @@
         <strong>问题答案分数:</strong>
       </label>
       <div class="controls" style="margin:0 30px 0 110px">
-        <%= f.text_field :answer_score, style: "width:400", required: true %>
+        <%= f.text_field :answer_score, style: "width:400" %>
       </div>
     </div>
 
@@ -45,7 +45,7 @@
         <strong>问题答案跳转:</strong>
       </label>
       <div class="controls" style="margin:0 30px 0 110px">
-        <%= f.text_field :answer_jump, style: "width:400", required: true %>
+        <%= f.text_field :answer_jump, style: "width:400" %>
       </div>
     </div>
 
