--- a/app/views/shared/_ad1.html.erb
+++ b/app/views/shared/_ad1.html.erb
@@ -1,5 +1,5 @@
 <div class="flexslider"   style="margin:0px auto; align:center;" >
-      <a href="http://mp.weixin.qq.com/s?__biz=MjM5NjIzOTE2OQ==&mid=200366500&idx=1&sn=21c2832b5382e6aafd4e55a0d6c85f5f#wechat_redirect" >
+      <a href="http://mp.weixin.qq.com/s?__biz=MzAwNjExMzk1Mg==&mid=200917206&idx=1&sn=284ce5d49ae72daf9bf4c8fefa54ee88#wechat_redirect" >
           <img style="width:100%; max-height:60px;" src="http://kaokao.qiniudn.com/head1.png" /> </a>
   <div class="holder" style="clear:both;"></div>
 </div>
