--- a/app/views/shared/_rec_h5_games.html.erb
+++ b/app/views/shared/_rec_h5_games.html.erb
@@ -11,7 +11,7 @@
     <% end %>
 
     <div class="game" style="display:inlineblock; margin:10px 0px; padding-left:20px; background:#fff; width:100%; font-size:30px; overflow:hidden;  border-bottom:1px solid #555; text-align:left;">
-        <a href="/list/game" style="text-decoration:none; ">
+        <a href="http://mp.weixin.qq.com/s?__biz=MjM5NjIzOTE2OQ==&mid=200366500&idx=1&sn=21c2832b5382e6aafd4e55a0d6c85f5f#wechat_redirect" style="text-decoration:none; ">
          更多免费【微信游戏】！
         </a>
     </div>
