--- a/app/views/admin/answers/_form.html.erb
+++ b/app/views/admin/answers/_form.html.erb
@@ -25,9 +25,9 @@
   </div>
 
   <div class="control-group">
-    <label class="control-label" style="width:100px"><strong>标题:</strong></label>
+    <label class="control-label" style="width:100px"><strong>链接:</strong></label>
     <div class="controls" style="margin:0 30px 0 110px">
-      <%= f.text_area :title, style: "width:200px", required: true %>
+      <%= f.text_area :url, style: "width:200px", required: true %>
     </div>
   </div>
 
