--- a/app/views/weitest/show.html.erb
+++ b/app/views/weitest/show.html.erb
@@ -46,7 +46,7 @@
     
     <% show_rec = @material.category.material_type != 1 %>
 
-    <%if @category.game_type_id != 7 and @category.game_type_id != 11 %>
+    <%if @category.game_type_id != 7 and @category.game_type_id != 11 and @category.game_type_id != 13 %>
       <%= render "shared/ad1" %>
     <% end %>
 
@@ -60,7 +60,7 @@
    
     <br/>
 
-    <% if show_rec and @category.game_type_id != 7 and @category.game_type_id != 11 %>
+    <% if show_rec and @category.game_type_id != 7 and @category.game_type_id != 11 and @category.game_type_id != 13 %>
       <%#= render "shared/ad_bottom" %>
       <%= render "shared/ad_wx" %>
       <% unless @category.use_wxjs %>
@@ -76,7 +76,7 @@
          <% if @category.game_type_id == 11 %>
            <%= render "shared/rec_article_games" %>
          <% end %>
-         <% if @category.id != 255 %>
+         <% if @category.game_type_id != 13 and @category.id != 255 %>
            <%= render "shared/ad_bottom_h5" %>
          <% end %>
       <% end %>
