--- a/app/views/weitest/show_new.html.erb
+++ b/app/views/weitest/show_new.html.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head>
+  <head>
       <link href="http://wei.qq275.com/vapp/shangjieba.png" rel="shortcut icon" type="image/vnd.microsoft.icon">
       <% @category = @material.category %>
       <title><%= @material.name %></title>
@@ -24,14 +24,28 @@
 
   <% sign_package = $wxclient.get_jssign_package(request.url) %>
       
-  <script src='http://res.wx.qq.com/open/js/jweixin-1.0.0.js' type='text/javascript'></script>
-  <script>
-    wx.config({
+  <script type="text/javascript">
+    <%= ERB.new(@category.js).result(binding).html_safe %>
+  </script>
+  
+  <style type="text/css"> 
+    <% @css_image   = @material.images.select{|i| i.state == 1 }[0].try(:body) %>
+    <% @css_image_2 = @material.images.select{|i| i.state == 10}[0].try(:body) %>
+    <% @css_image_3 = @material.images.select{|i| i.state == 11}[0].try(:body) %>
+    <% @css_image_4 = @material.images.select{|i| i.state == 12}[0].try(:body) %>
+    <%= ERB.new(@category.css).result(binding).html_safe %>
+  </style>
+   
+ </head>
+
+<script src='http://res.wx.qq.com/open/js/jweixin-1.0.0.js' type='text/javascript'></script>
+<script>
+  wx.config({
     debug: true,
     appId: "<%= sign_package['appId'] %>",
     timestamp: "<%= sign_package['timestamp'] %>",
     nonceStr:  "<%= sign_package['nonceStr'] %>",
-    signature: "<%= sign_package['signature'] %> ",
+    signature: "<%= sign_package['signature'] %>",
     jsApiList: [
       'onMenuShareTimeline',
       'onMenuShareAppMessage',
@@ -85,6 +99,14 @@
     wx.onMenuShareAppMessage({
       title: "<%= @material.wx_title %>", // 分享标题
       desc: "<%= @material.wxdesc %>", // 分享描述
+    <% show_rec = @material.category.material_type != 1 %>
+
+    <%if @category.game_type_id != 7 and @category.game_type_id != 11 and @category.game_type_id != 13 %>
+      <%= render "shared/ad1" %>
+    <% end %>
+
+
+    <% @prompt_image = @material.images.select{|i| i.state == 3 }[0].try(:body) %>
       link: "<%= @material.get_share_url %>", // 分享链接
       imgUrl: "<%= @material.wx_tlimg %>", // 分享图标
       type: '', // 分享类型,music、video或link，不填默认为link
@@ -100,25 +122,6 @@
 </script>
 
 
-      <script type="text/javascript">
-        <%= ERB.new(@category.js).result(binding).html_safe %>
-      </script>
-      <style> 
-        <% @css_image   = @material.images.select{|i| i.state == 1 }[0].try(:body) %>
-        <% @css_image_2 = @material.images.select{|i| i.state == 10}[0].try(:body) %>
-        <% @css_image_3 = @material.images.select{|i| i.state == 11}[0].try(:body) %>
-        <% @css_image_4 = @material.images.select{|i| i.state == 12}[0].try(:body) %>
-        <%= ERB.new(@category.css).result(binding).html_safe %>
-      </style>
-    </head>
-    
-    <% show_rec = @material.category.material_type != 1 %>
-
-    <%if @category.game_type_id != 7 and @category.game_type_id != 11 and @category.game_type_id != 13 %>
-      <%= render "shared/ad1" %>
-    <% end %>
-
-    <% @prompt_image = @material.images.select{|i| i.state == 3 }[0].try(:body) %>
     <% @commit_btn   = @material.images.select{|i| i.state == 9 }[0].try(:body) %>
     <% @close_btn    = @material.images.select{|i| i.state == 16}[0].try(:body) %>
     <% @html_image   = @material.images.select{|i| i.state == 2 }[0].try(:body) %>
