--- a/app/views/weitest/show_new.html.erb
+++ b/app/views/weitest/show_new.html.erb
@@ -79,9 +79,12 @@
     ]
   });
 
+function share_api(){
+
   wx.ready(function(){
+    var info = $("#info").text();
     wx.onMenuShareTimeline({
-      title: "<%= @material.wx_title %>", // 分享标题
+      title: info + "<%= @material.wx_title %>", // 分享标题
       link: "<%= @material.get_share_url %>", // 分享链接
       imgUrl: "<%= @material.wx_tlimg %>", // 分享图标
       success: function () { 
@@ -93,7 +96,7 @@
     });
 
     wx.onMenuShareAppMessage({
-      title: "<%= @material.wx_title %>", // 分享标题
+      title: info + "<%= @material.wx_title %>", // 分享标题
       desc: "<%= @material.wxdesc %>", // 分享描述
       link: "<%= @material.get_share_url %>", // 分享链接
       imgUrl: "<%= @material.wx_tlimg %>", // 分享图标
@@ -108,11 +111,17 @@
     });
   });
 
+}
+
+share_api();
+
 </script>
 
   <script type="text/javascript">
     <%= ERB.new(@category.js).result(binding).html_safe %>
   </script>
+
+  <%= render "shared/ad1" %>
 
     <% @commit_btn   = @material.images.select{|i| i.state == 9 }[0].try(:body) %>
     <% @close_btn    = @material.images.select{|i| i.state == 16}[0].try(:body) %>
@@ -120,7 +129,9 @@
     <% @html_image_2 = @material.images.select{|i| i.state == 13}[0].try(:body) %>
     <% @html_image_3 = @material.images.select{|i| i.state == 14}[0].try(:body) %>
     <%= ERB.new(@category.html).result(binding).html_safe %>
-   
+  
+     <%= render "shared/ad_wx" %> 
+ 
     <%= render "shared/analysis" %>
    
     <%= render :partial=>"shared/report", :locals=>{:type=>"pv", :cid=>@category.id, :gid=>@material.id } %>
