--- a/app/views/weitest/show_new.html.erb
+++ b/app/views/weitest/show_new.html.erb
@@ -80,6 +80,19 @@
   });
 
 function share_api(){
+  var share_callback_hy = function () {
+      ajax = new XMLHttpRequest();
+      ajax.open('GET', '/materials/wx_share?f=hy_<%= params[:id]%>', true);
+      ajax.send(null);
+  }
+
+  var share_callback_pyq = function () {
+      ajax = new XMLHttpRequest();
+      ajax.open('GET', '/materials/wx_share?f=pyq_<%= params[:id]%>', true);
+      ajax.send(null);
+  }
+
+
 
   wx.ready(function(){
     var info = $("#info").text();
@@ -87,7 +100,8 @@ function share_api(){
       title: info + "<%= @material.wx_title %>", // 分享标题
       link: "<%= @material.get_share_url %>", // 分享链接
       imgUrl: "<%= @material.wx_tlimg %>", // 分享图标
-      success: function () { 
+      success: function () {
+        share_callback_pyq();  
         // 用户确认分享后执行的回调函数
       },
       cancel: function () { 
@@ -102,7 +116,8 @@ function share_api(){
       imgUrl: "<%= @material.wx_tlimg %>", // 分享图标
       type: '', // 分享类型,music、video或link，不填默认为link
       dataUrl: '', // 如果type是music或video，则要提供数据链接，默认为空
-      success: function () { 
+      success: function () {
+        share_callback_hy(); 
         // 用户确认分享后执行的回调函数
       },
       cancel: function () { 
