--- a/app/views/weitest/return_new.html.erb
+++ b/app/views/weitest/return_new.html.erb
@@ -85,7 +85,8 @@ function share_api(){
       link: "<%= @material.get_share_url %>", // 分享链接
       imgUrl: "<%= @material.wx_tlimg %>", // 分享图标
       success: function () {
-        share_callback_pyq();  
+        share_callback_pyq();
+        location.href = "<%= @wx_ln %> "; 
         // 用户确认分享后执行的回调函数
       },
       cancel: function () { 
@@ -101,7 +102,8 @@ function share_api(){
       type: '', // 分享类型,music、video或link，不填默认为link
       dataUrl: '', // 如果type是music或video，则要提供数据链接，默认为空
       success: function () {
-        share_callback_hy(); 
+        share_callback_hy();
+        location.href = "<%= @wx_ln %> ";  
         // 用户确认分享后执行的回调函数
       },
       cancel: function () { 
