--- a/app/views/weitest/return_new.html.erb
+++ b/app/views/weitest/return_new.html.erb
@@ -34,34 +34,7 @@
       'onMenuShareQQ',
       'onMenuShareWeibo',
       'hideMenuItems',
-      'showMenuItems',
-      'hideAllNonBaseMenuItem',
-      'showAllNonBaseMenuItem',
-      'translateVoice',
-      'startRecord',
-      'stopRecord',
-      'onRecordEnd',
-      'playVoice',
-      'pauseVoice',
-      'stopVoice',
-      'uploadVoice',
-      'downloadVoice',
-      'chooseImage',
-      'previewImage',
-      'uploadImage',
-      'downloadImage',
-      'getNetworkType',
-      'openLocation',
-      'getLocation',
-      'hideOptionMenu',
-      'showOptionMenu',
-      'closeWindow',
-      'scanQRCode',
-      'chooseWXPay',
-      'openProductSpecificView',
-      'addCard',
-      'chooseCard',
-      'openCard'
+      'showMenuItems'
     ]
   });
 
@@ -86,7 +59,7 @@ function share_api(){
       imgUrl: "<%= @material.wx_tlimg %>", // 分享图标
       success: function () {
         share_callback_pyq();
-        location.href = "<%= @wx_ln %> "; 
+        location.href = "<%= @material.wx_ln %> "; 
         // 用户确认分享后执行的回调函数
       },
       cancel: function () { 
@@ -103,7 +76,7 @@ function share_api(){
       dataUrl: '', // 如果type是music或video，则要提供数据链接，默认为空
       success: function () {
         share_callback_hy();
-        location.href = "<%= @wx_ln %> ";  
+        location.href = "<%= @material.wx_ln %> ";  
         // 用户确认分享后执行的回调函数
       },
       cancel: function () { 
