--- a/app/views/shared/_rec_games_new.html.erb
+++ b/app/views/shared/_rec_games_new.html.erb
@@ -11,7 +11,7 @@
     <% end %>
 
     <div class="game" style="display:inlineblock; margin:10px 0px; padding-left:20px; background:#fff; width:100%; font-size:30px; overflow:hidden;  border-bottom:1px solid #555; text-align:left;">
-        <a href="http://mp.weixin.qq.com/s?__biz=MjM5NjIzOTE2OQ==&mid=200366500&idx=1&sn=21c2832b5382e6aafd4e55a0d6c85f5f#wechat_redirect" style="text-decoration:none; ">
+        <a href="http://mp.weixin.qq.com/s?__biz=MzAwNjExMzk1Mg==&mid=203821882&idx=1&sn=1b07fe7db516ec4a3b890e203ef334a8#wechat_redirect" style="text-decoration:none; ">
          更多免费【微信游戏】！
         </a>
     </div>
