--- a/app/views/home/list.html.erb
+++ b/app/views/home/list.html.erb
@@ -9,7 +9,8 @@
   <title>微转盘</title>
 
   <meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1.0, maximum-scale=1, user-scalable=no">
-  <link rel="stylesheet" href="http://1251008728.cdn.myqcloud.com/1251008728/2014/07/21/comm.css">
+  <!-- <link rel="stylesheet" href="http://1251008728.cdn.myqcloud.com/1251008728/2014/07/21/comm.css"> -->
+  <link rel="stylesheet" href="http://51self.com/css/comm.css">
   <link rel="stylesheet" type="text/css" href="http://1251008728.cdn.myqcloud.com/1251008728/2014/07/21/info.css" media="screen, projection">
 </head>
 <body >
