--- a/app/views/shared/_ad1.html.erb
+++ b/app/views/shared/_ad1.html.erb
@@ -1,5 +1,5 @@
 <div class="flexslider"   style="margin:0px auto; align:center;" >
-      <a href="http://mp.weixin.qq.com/s?__biz=MzAxOTE1MzQ3Ng==&mid=203971151&idx=1&sn=5f6daddfd553757fa640e10b683adad4#wechat_redirect" >
+      <a href="http://51self.com/weitest/1203611402" >
           <img style="width:100%; max-height:60px;" src="http://kaokao.qiniudn.com/head1.png" /> </a>
   <div class="holder" style="clear:both;"></div>
 </div>
