--- a/app/views/home/o2o.html.erb
+++ b/app/views/home/o2o.html.erb
@@ -81,15 +81,16 @@
     });
 </script>
 
+<!--
 <div style="background: #444;">
-      <a href="/?page=<%= @next_page %>" >
+      <a href="/o2o?page=<%= @next_page %>" >
         <div style="margin: 0 auto 0 auto; width: 100%; font-size: 36px; padding:15px; text-align:center; color:white;">
           点击加载更多游戏
         </div>
       </a>
 </div>
 
-
+-->
 
 <footer class="footer" id="j_foot_nav" style="display: block;">
 
