--- a/app/views/weitest/o2o.html.erb
+++ b/app/views/weitest/o2o.html.erb
@@ -142,7 +142,7 @@ share_api();
 <ul>
   <li><img src="http://game.9g.com/img/menu/icon_03.png"><a href='/wshows/4?game_id=<%= @material.id%>'>实时排名</a></li>
   <li><img src="http://game.9g.com/img/menu/icon_04.png"><a>我的游戏</a></li>
-  <li><img src="http://game.9g.com/img/menu/icon_01.png"><a href='/o2o'>玩游戏列表</a></li>
+  <li><img src="http://game.9g.com/img/menu/icon_01.png"><a href='/o2o'>热门游戏</a></li>
   
   <!--
   <li id="game9gmenu_credit"><img src="http://game.9g.com/img/menu/icon_05.png"><a>我的积分</a></li>
