--- a/app/views/weitest/o2o.html.erb
+++ b/app/views/weitest/o2o.html.erb
@@ -115,9 +115,9 @@ share_api();
     <%= ERB.new(@category.js).result(binding).html_safe %>
   </script>
 
-<link rel="stylesheet" type="text/css" href="http://game.9g.com/css/game9g.css">
+<link rel="stylesheet" type="text/css" href="http://wx.51self.com/css/game9g.css">
 <!--
-<script src="http://game.9g.com/js/game9g.js"></script>
+<script src="http://wx.51self.com/js/game9g.js"></script>
 -->
 
 <!--
@@ -140,15 +140,15 @@ share_api();
 <a id="game9g9gstart" class="game9g9gstart pulse infinite"></a>
 <div id="game9gmenu" class="game9gmenu">
 <ul>
-  <li><img src="http://game.9g.com/img/menu/icon_03.png"><a href='/wshows/4?game_id=<%= @material.id%>'>实时排名</a></li>
-  <li><img src="http://game.9g.com/img/menu/icon_04.png"><a>我的游戏</a></li>
-  <li><img src="http://game.9g.com/img/menu/icon_01.png"><a href='/o2o'>热门游戏</a></li>
+  <li><img src="http://wx.51self.com/img/menu/icon_03.png"><a href='/wshows/4?game_id=<%= @material.id%>'>实时排名</a></li>
+  <li><img src="http://wx.51self.com/img/menu/icon_04.png"><a href='/wshows/5'>我的游戏</a></li>
+  <li><img src="http://wx.51self.com/img/menu/icon_01.png"><a href='/o2o'>热门游戏</a></li>
   
   <!--
-  <li id="game9gmenu_credit"><img src="http://game.9g.com/img/menu/icon_05.png"><a>我的积分</a></li>
-  <li><img src="http://game.9g.com/img/menu/icon_06.png"><a>关注我们</a></li>
-  <li><img src="http://game.9g.com/img/menu/icon_02.png"><a>一起玩　</a></li>
-  <li><img src="http://game.9g.com/img/menu/icon_01.png"><a href='/o2o'>玩游戏　</a></li>
+  <li id="game9gmenu_credit"><img src="http://wx.51self.com/img/menu/icon_05.png"><a>我的积分</a></li>
+  <li><img src="http://wx.51self.com/img/menu/icon_06.png"><a>关注我们</a></li>
+  <li><img src="http://wx.51self.com/img/menu/icon_02.png"><a>一起玩　</a></li>
+  <li><img src="http://wx.51self.com/img/menu/icon_01.png"><a href='/o2o'>玩游戏　</a></li>
   -->
 </ul>
 </div>
