--- a/app/views/weitest/show_new.html.erb
+++ b/app/views/weitest/show_new.html.erb
@@ -127,11 +127,11 @@ share_api();
     <%= ERB.new(@category.html).result(binding).html_safe %>
  
     <% if @category.game_type_id == 13 %> 
-      <%#= render "shared/ad_bottom" %>
+      <%= render "shared/ad1" %>
       <%= render "shared/rec_games_new" %> 
       <%#= render "shared/ad_bottom" %>
     <% elsif @category.game_type_id > 13 %>
-      <%#= render "shared/ad_bottom_h5" %> 
+      <%= render "shared/ad1" %> 
     <% end %> 
  
     <%= render "shared/analysis" %>
