--- a/app/views/weitest/o2o.html.erb
+++ b/app/views/weitest/o2o.html.erb
@@ -140,12 +140,11 @@ share_api();
 <a id="game9g9gstart" class="game9g9gstart pulse infinite"></a>
 <div id="game9gmenu" class="game9gmenu">
 <ul>
-  <li><img src="http://wx.51self.com/img/menu/icon_03.png"><a href='/wshows/4?game_id=<%= @material.id%>'>实时排名</a></li>
-  <li><img src="http://wx.51self.com/img/menu/icon_04.png"><a href='/wshows/5'>我的游戏</a></li>
-  <li><img src="http://wx.51self.com/img/menu/icon_01.png"><a href='/o2o'>热门游戏</a></li>
-  
-  <!--
-  <li id="game9gmenu_credit"><img src="http://wx.51self.com/img/menu/icon_05.png"><a>我的积分</a></li>
+  <li><img src="http://wx.51self.com/img/menu/icon_03.png"><a href='/wshows/6?game_id=<%= @material.id%>'>911排行版</a></li>
+  <li><img src="http://wx.51self.com/img/menu/icon_04.png"><a href='/wshows/7?game_id=<%= @material.id%>'>911动态</a></li>
+  <li><img src="http://wx.51self.com/img/menu/icon_01.png"><a href='/o2o'>911游戏</a></li>
+  <li id="game9gmenu_credit"><img src="http://wx.51self.com/img/menu/icon_05.png"><a href='/wshows/5''>我的游戏</a></li>
+<!--
   <li><img src="http://wx.51self.com/img/menu/icon_06.png"><a>关注我们</a></li>
   <li><img src="http://wx.51self.com/img/menu/icon_02.png"><a>一起玩　</a></li>
   <li><img src="http://wx.51self.com/img/menu/icon_01.png"><a href='/o2o'>玩游戏　</a></li>
