--- a/app/views/admin/materials/_form.html.erb
+++ b/app/views/admin/materials/_form.html.erb
@@ -30,6 +30,21 @@
     </div>
   </div>
 
+  <div class="control-group">
+    <label class="control-label">对象类型</label>
+    <div class="controls">
+       <%= f.text_field :object_type, class: "input-xxlarge" %>
+    </div>
+  </div>
+
+  <div class="control-group">
+    <label class="control-label">对象ID</label>
+    <div class="controls">
+       <%= f.text_field :object_id, class: "input-xxlarge" %>
+    </div>
+  </div>
+
+
   <% if action_name == "edit" && @material.category && @material.category.material_type == 1 %>
 
         <% questions = @material.questions %>
