--- a/app/views/weitest/o2o.html.erb
+++ b/app/views/weitest/o2o.html.erb
@@ -136,13 +136,13 @@ share_api();
 </style>
 -->
 
-<% unless @beacon %>
+<% if @beacon and @beacon.state.to_i >1  %>
 <a id="game9g9gstart" class="game9g9gstart pulse infinite"></a>
 <div id="game9gmenu" class="game9gmenu">
 <ul>
-  <li><img src="http://wx.51self.com/img/menu/icon_03.png"><a href='/wshows/6?game_id=<%= @material.id%>'>911排行版</a></li>
-  <li><img src="http://wx.51self.com/img/menu/icon_04.png"><a href='/wshows/7?game_id=<%= @material.id%>'>911动态</a></li>
-  <li><img src="http://wx.51self.com/img/menu/icon_01.png"><a href='/o2o'>911游戏</a></li>
+  <li><img src="http://wx.51self.com/img/menu/icon_03.png"><a href='/wshows/6?beaconid=<%=@beacon.url %>&game_id=<%= @material.id%>'><%= @beacon.name  %>排行版</a></li>
+  <li><img src="http://wx.51self.com/img/menu/icon_04.png"><a href='/wshows/7?beaconid=<%= @beacon.url %>&game_id=<%= @material.id%>'><%= @beacon.name %>动态</a></li>
+  <li><img src="http://wx.51self.com/img/menu/icon_01.png"><a href='/<%= @beacon.url %>'><%=@beacon.name %></a></li>
   <li id="game9gmenu_credit"><img src="http://wx.51self.com/img/menu/icon_05.png"><a href='/wshows/5''>我的游戏</a></li>
 
 <!--
