--- a/app/views/admin/burls/index.html.erb
+++ b/app/views/admin/burls/index.html.erb
@@ -10,6 +10,8 @@
     <th>remark</th>
     <th>State</th>
     <th>url</th>
+    <th>target_type</th>
+    <th>target_id</th>
     <th>pv</th>
     <th>uv</th>
     <th>weight</th> 
@@ -25,6 +27,8 @@
     <td><%= burl.remark %></td>
     <td><%= burl.state %></td>
     <td><%= burl.url %></td>
+    <td><%= burl.target_type %></td>
+    <td><%= burl.target_id %></td>
     <td><%= burl.weight %></td>
     <td><%= burl.pv %></td>
     <td><%= burl.uv %></td>
