--- a/app/views/admin/burls/_form.html.erb
+++ b/app/views/admin/burls/_form.html.erb
@@ -36,6 +36,24 @@
       </div>
     </div>
 
+
+    <div class="control-group">
+      <label class="control-label">target_type</label>
+      <div class="controls">
+        <%= f.text_field :target_type, required: true %>
+      </div>
+    </div>
+
+
+    <div class="control-group">
+      <label class="control-label">target_id</label>
+      <div class="controls">
+        <%= f.text_field :target_id, required: true %>
+      </div>
+    </div>
+
+
+
     <div class="control-group">
       <label class="control-label">weight</label>
       <div class="controls">
