--- a/app/views/admin/shared/_nav.html.erb
+++ b/app/views/admin/shared/_nav.html.erb
@@ -55,9 +55,13 @@
             <%= link_to '用户活动', [:admin,:records] %>
           </li> 
 
+          <li class="<%= controller_name.in?(['scores']) ? 'active' : '' %>">
+            <%= link_to '积分管理', [:admin,:scores] %>
+          </li>  
+          
 
-          <li class="<%= controller_name.in?(['ads']) ? 'active' : ''%>">
-            <%= link_to '广告管理', [:admin,:ads] %>
+          <li class="<%= controller_name.in?(['images']) ? 'active' : ''%>">
+            <%= link_to '图片管理', [:admin,:images] %>
           </li>
         </ul>
       </div><!--/.nav-collapse -->
